--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start",
     "lint": "eslint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
+    "@prisma/client": "^5.6.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "next": "15.5.6",
@@ -26,7 +30,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
     "postcss": "^8.5.6",
+    "prisma": "^5.6.0",
     "tailwindcss": "^4.1.15",
+    "ts-node": "^10.9.1",
     "typescript": "^5"
   }
 }
