--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^2.0.0",
     "zod": "^3.22.4"
   },
